--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@react-email/render": "^1.4.0",
     "bcrypt": "^6.0.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-email": "^4.3.2",
+    "resend": "^6.4.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
