--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "resend": "^6.4.0",
     "zod": "^4.1.12"
   },
@@ -24,11 +25,13 @@
     "@types/node": "^20",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "postcss": "^8.5.6",
     "prisma": "^6.18.0",
     "react-email": "^2.0.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
     "typescript": "^5"
   },
@@ -36,5 +39,3 @@
     "seed": "tsx prisma/seed.ts"
   }
 }
-
-    
